# cpp-bad_apple

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  cpp-bad_apple.cpp  cpp-bad_apple.h
